cf_analysis_results/checkerframework_results/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8.txt
../../../../datasets/june2020_dataset/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/gui/GUIAdapter.java:61: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.InputStream $$ possible exceptional exit due to new ObjectInputStream(new BufferedInputStream(is)) with exception type java.io.IOException $$ ( 1676, 1753 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
		InputStream is = PrecomputedValues.class.getResourceAsStream("strategy.dat");
		            ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(new BufferedInputStream(is)) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/gui/GUIAdapter.java:62: error: (required.method.not.called) $$ 4 $$ method close $$ in $$ java.io.ObjectInputStream $$ possible exceptional exit due to PrecomputedValues.load(in) with exception type java.io.IOException $$ ( 1756, 1830 ) $$ @MustCall method close may not have been invoked on in or any of its aliases.
		ObjectInputStream in = new ObjectInputStream(new BufferedInputStream(is));
		                  ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: possible exceptional exit due to PrecomputedValues.load(in) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/strategies/PrecomputedValues.java:112: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1012 $$ java.io.FileOutputStream $$ possible exceptional exit due to new ObjectOutputStream(new BufferedOutputStream(new FileOutputStream(file))) with exception type java.io.IOException $$ ( 2964, 2990 ) $$ @MustCall method close may not have been invoked on temp-var-1012 or any of its aliases.
			out = new ObjectOutputStream(new BufferedOutputStream(new FileOutputStream(file)));
			                                                      ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectOutputStream(new BufferedOutputStream(new FileOutputStream(file))) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/core/strategies/PrecomputedValues.java:143: error: (required.method.not.called) $$ 4 $$ method close $$ temp-var-1018 $$ java.io.FileInputStream $$ possible exceptional exit due to new ObjectInputStream(new BufferedInputStream(new FileInputStream(file))) with exception type java.io.IOException $$ ( 3513, 3538 ) $$ @MustCall method close may not have been invoked on temp-var-1018 or any of its aliases.
			in = new ObjectInputStream(new BufferedInputStream(new FileInputStream(file)));
			                                                   ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectInputStream(new BufferedInputStream(new FileInputStream(file))) with exception type java.io.IOException
../../../../datasets/june2020_dataset/url9d32402837_dusan_rychnovsky_chess_endgames_tgz-pJ8-cz_dusanrychnovsky_chessendgames_core_strategies_PrecomputedValuesJ8/src/cz/dusanrychnovsky/chessendgames/CLIAdapter.java:80: error: (required.method.not.called) $$ 4 $$ method close $$ is $$ java.io.InputStream $$ possible exceptional exit due to in.close() with exception type java.io.IOException $$ ( 2196, 2260 ) $$ @MustCall method close may not have been invoked on is or any of its aliases.
			is = PrecomputedValues.class.getResourceAsStream("strategy.dat");
			   ^
  The type of object is: java.io.InputStream.
  Reason for going out of scope: possible exceptional exit due to in.close() with exception type java.io.IOException
5 errors
